# NCdesktop-v3

./: .gitignore  CHARTER-v2.1-学习空间与知识关联.md  NOTEBooklm 痛点及方案分析.md  NoteCapt-投资人版.md
windowsversion/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
windowsversion/src-tauri/capabilities/: default.json
windowsversion/src-tauri/icons/: icon.icns
windowsversion/src-tauri/macos/: asr_bridge.swift  ocr_bridge.swift
windowsversion/src-tauri/resources/: runtime-manifest.json
windowsversion/src-tauri/src/: heuristic.rs  ics_parser.rs  lib.rs  source_scan.rs  startup.rs  windows_native.rs  workspace.rs
windowsversion/src-tauri/src/audio/: decoder.rs  metadata.rs  mod.rs  waveform.rs
windowsversion/src-tauri/src/cloud_ai/: asr_whisper_api.rs  audio_chunker.rs  heic_convert.rs  mod.rs  ocr_openai_vision.rs  pdf_render.rs
windowsversion/src-tauri/src/commands/: app_mode.rs  asset_inference.rs  audio.rs  calendar.rs  categories.rs  conversion.rs  course_preview.rs  export.rs  extraction.rs  knowledge.rs  knowledge_graph.rs  knowledge_synthesis.rs  knowledge_understanding.rs  knowledge_unit_learning.rs  knowledge_units.rs  library.rs  llm.rs  mod.rs  note.rs  outbound.rs  project.rs  prompts.rs  search.rs  settings.rs  skill_mcp.rs  skills.rs  source_view.rs  sync.rs  tag.rs  timeline.rs  user_prompt.rs  video_audio.rs  workspace_assets.rs  workspace_folders.rs
windowsversion/src-tauri/src/db/: calendar.rs  categories.rs  co_occurrence.rs  concepts_extraction_log.rs  conversion_meta.rs  course_preview.rs  extraction.rs  knowledge.rs  knowledge_understanding.rs  knowledge_units.rs  library.rs  mod.rs  note.rs  project.rs  repair.rs  search.rs  settings.rs  skills.rs  tag.rs  timeline.rs  user_prompt.rs
windowsversion/src-tauri/src/extraction/: conversion.rs  failure_code.rs  mod.rs  models.rs  runtime_check.rs  scan_pdf_detect.rs  scheduler.rs
windowsversion/src-tauri/src/extraction/extractors/: audio_asr.rs  audio_asr_iflytek.rs  docx.rs  image_ocr.rs  markitdown.rs  mod.rs  pdf_scan.rs  pdf_text.rs  pptx.rs  text.rs  text_passthrough.rs
windowsversion/src-tauri/src/llm/: chat.rs  client.rs  mod.rs  prompt_runtime.rs  prompts.rs  retry.rs
windowsversion/src-tauri/src/macos/: asr_ffi.rs  mod.rs  ocr_ffi.rs
windowsversion/src-tauri/src/models/: asset.rs  common.rs  library.rs  mod.rs  project.rs  settings.rs  timeline.rs
windowsversion/src-tauri/src/sync/: detector.rs  file_copier.rs  manifest.rs  meta_parser.rs  mod.rs  progress.rs  session_parser.rs  state.rs  timeline_builder.rs
windowsversion/src-tauri/src/testing/: mod.rs
windowsversion/src-tauri/src/utils/: ipc_error.rs  mod.rs  nfc.rs  safe_name.rs  safe_rename.rs  write_guard.rs
项目启动/NCdesktop/src-tauri/: Cargo.toml  tauri.conf.json
项目启动/NCdesktop/src-tauri/resources/scripts/: extract_pdf_annotations.py
项目启动/NCdesktop/src-tauri/src/: lib.rs  source_scan.rs  startup.rs
项目启动/NCdesktop/src-tauri/src/commands/: asset.rs  asset_inference.rs  calendar.rs  categories.rs  conversion.rs  course_preview.rs  dropzone.rs  export.rs  extraction.rs  kc.rs  knowledge.rs  knowledge_graph.rs  knowledge_synthesis.rs  knowledge_understanding.rs  knowledge_unit_learning.rs  knowledge_units.rs  library.rs  llm.rs  mod.rs  note.rs  outbound.rs  project.rs  prompts.rs  search.rs  settings.rs  skill_mcp.rs  skills.rs  sync.rs  tag.rs  timeline.rs  user_prompt.rs  video_audio.rs  workspace_assets.rs
项目启动/NCdesktop/src-tauri/src/db/: asset.rs  calendar.rs  co_occurrence.rs  conversion_meta.rs  course_preview.rs  extraction.rs  knowledge.rs  migration.rs  mod.rs
项目启动/NCdesktop/src-tauri/src/extraction/: failure_code.rs  mod.rs  models.rs  pdf_annotations.rs  runtime_check.rs  scan_pdf_detect.rs  scheduler.rs  video_audio.rs
项目启动/NCdesktop/src-tauri/src/kc/: client.rs  defense.rs  enrichment.rs  errors.rs  frontmatter.rs  mod.rs  process.rs  settings.rs
项目启动/NCdesktop/src-tauri/src/llm/: classify_parse.rs
项目启动/NCdesktop/src-tauri/src/sync/: mod.rs  usb_import.rs  volume_watch.rs
项目启动/NCdesktop/src-tauri/tests/: bench_list_root_assets.rs  kc_client_integration.rs  kc_e2e_pipeline.rs  kc_enrichment_integration.rs  kc_failure_injection.rs  kc_lifecycle.rs  kc_perf_smoke.rs  mock_kc_server_basic.rs  workspace_unified_md_integration.rs
项目启动/NCdesktop/src-tauri/tests/common/: mock_kc.rs  mod.rs
(+858 files in other folders)
